Set settings manager service public and create an alias

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,5 +1,9 @@
 services:
+    Dmishh\SettingsBundle\Manager\SettingsManager:
+      alias: dmishh.settings.settings_manager
+
     settings_manager:
+      public: true
       alias: dmishh.settings.settings_manager
 
     dmishh.settings.settings_manager:
